# cpi-error-handle-demo

./: Anchor.toml  README.md  package-lock.json  package.json
programs/cpi-error-handle/: Cargo.toml
programs/cpi-error-handle/src/: lib.rs
programs/simple-error/: Cargo.toml
programs/simple-error/src/: lib.rs
tests/: cpi-error-handle.ts
