[package]
name = "cpi-error-handle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_error_handle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", default-features = true, features = [
    "init-if-needed",
    "event-cpi",
] }
anchor-spl = { version = "0.31.1", default-features = true }
simple-error = { path = "../simple-error", features = ["cpi"] }
